# mcp_client

./: README.md  pyproject.toml
src/mcp_client/: client.py  config.py  llm.py  main.py
tests/: test_config.toml  test_config_load.py  test_mock_flow.py
