[project]
name = "mcp-client"
version = "0.1.0"
description = "A generic MCP client connecting LLMs to MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "tomli>=2.0.1"
]

[project.scripts]
mcp-client = "mcp_client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
